Fixed alignment issue on the add/subtract page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -633,6 +633,9 @@ span.operations-symbol{
 	width: 940px;
 	display:none;
 }
+#subtract {
+	margin-right:20px;
+}
 
 
 
